<resources>
    <string name="app_name">HW11_4</string>
    <string name="email">E-mail</string>
    <string name="inputEmail">Введите свой e-mail</string>
    <string name="password">Password</string>
    <string name="inputPassword">Введите свой пароль</string>
    <string name="agreement">Я принимаю условия пользовательского соглашения</string>
    <string name="login">Login</string>
    <string name="login_complete">Login complete</string>
    <string name="anr">ANR</string>
    <string name="incorrect">E-mail is incorrect</string>
    <string name="totoro">Totoro</string>
    <string name="susuwatari">Susuwatari</string>
    <string name="yasuko">Yasuko Kusakabe</string>
    <string name="tatsuo">Tatsuo Kusakabe</string>
    <string name="mei">Mei Kusakabe</string>
    <string name="satsuki">Satsuki Kusakabe</string>
    <string name="catbus">Catbus</string>
    <string name="detail1">detail</string>
    <string name="hieroglyph">hieroglyph</string>
    <string name="totoro_info">То́торо (яп. トトロ) — хранитель леса, большое мохнатое существо серого
        цвета. Тоторо — не традиционный японский персонаж: его полностью придумал Миядзаки. Тем не
        менее для Тоторо естественно находиться в системе традиционных японских представлений среди
        низших природных божеств, духов-хранителей местности. Согласно задумке Миядзаки, они покрыты
        мягким мехом и являются «смесью» нескольких животных: огромных ошейниковых совок (уши,
        «шевроны» на груди и «ухающие» звуки, которые тоторо издают, когда играют ночью на
        окаринах), барсуков и медведей (размеры, очертания тела). Не умеет говорить, издаёт
        только грудные рычащие звуки. Хотя Тоторо изображён добрым и милым персонажем, в фильме
        присутствуют намёки на то, что если его разозлить, может случиться большая беда.
        Большого Тоторо (серого цвета) зовут О Тоторо, его рост более двух метров, а его маленьких
        спутников: синего — Средний Тоторо (Тю Тоторо), белого — Маленький Тоторо (Тиби Тоторо).
        </string>
    <string name="susuwatari_info">Сусуватари (яп. 煤渡り, букв. «странствующая сажа») — «пыльные
        зайчики» или «духи сажи» — пугливые, робкие создания, которые живут в заброшенных домах
        и покрывают их пылью и сажей. Это маленькие, чёрные и пушистые, как мех, комочки сажи с
        любопытными глазами. Они движутся, паря над поверхностью, но могут произвольно отращивать
        тонкие ножки и ручки для выполнения возложенных на них заданий. Кроме того, они могут
        поднимать объекты во много раз тяжелее своего собственного веса. Сусуватари издают
        писклявые звуки, когда чем-то восхищены, и распадаются в сажу, если их раздавить.</string>
    <string name="yasuko_info">Ясуко Кусакабэ (яп. 草壁 靖子 Кусакабэ Ясуко) — мать
        семейства. Находится в больнице Ситикокуяма. Её не выписали на выходные из-за простуды и
        она не смогла приехать, поэтому врачи отправили телеграмму в деревню. Дочки сильно
        забеспокоились из-за этого. Считает, что не нужно было отправлять телеграмму из-за
        простуды, чтобы не тревожить родных.</string>
    <string name="tatsuo_info">Тацуо Кусакабэ (яп. 草壁 タツオ Кусакабэ Тацуо) — отец двух
        дочерей. Спокойный и рассудительный человек, старается всё объяснить своим детям. С
        уважением относится к традициям и фольклору, приветствует духов леса и оказывает им
        почтение, показывая при этом хороший пример Сацуки и Мэй.</string>
    <string name="mei_info">Мэй Кусакабэ (яп. 草壁 メイ Кусакабэ Мэй) — младшая сестра
        Сацуки, маленькая девочка четырёх лет с каштановыми волосами, которая ещё не ходит в школу.
        Упрямая и обидчивая, она находится под опекой сестры. Хотя порой они и ссорятся, но тем не
        менее Мэй очень любит свою сестру, везде старается следовать и поспевать за ней. Она первой
        встречает Тоторо.</string>
    <string name="satsuki_info">Сацуки Кусакабэ (яп. 草壁 サツキ Кусакабэ Сацуки) —
        старшая сестра, бойкая худенькая девочка с короткими тёмными волосами, очень ответственная,
        заботится о сестре и об отце, помогает ему при переезде, готовит еду. Её мать говорит, что
        Сацуки ведёт себя как взрослая, так как вынужденно многое взяла на себя из-за её отсутствия.
        Поначалу она ссорится с соседским мальчиком, Кантой, и избегает его, однако позже меняет к
        нему своё отношение. Сацуки, познакомившись с Тоторо, подружилась с ним и даже просила его
        помощи в поисках младшей сестры.</string>
    <string name="catbus_info">Котобус (яп. ねこバス нэкобасу)— обитатель леса[5]. Он представляет
        собой огромного улыбающегося кота, тело которого имеет форму кузова автобуса с большим
        пушистым хвостом. Перемещается Котобус на двенадцати лапах, расположенных вдоль туловища,
        как у сороконожки. Салон Котобуса оборудован мягкими, покрытыми шерстью сидениями. Проход
        в салон появляется волшебным образом спереди слева (в Японии левостороннее движение) в тот
        момент, когда пассажир хочет войти внутрь либо покинуть салон. Огромные кошачьи глаза в
        тёмное время суток освещают дорогу ярким жёлтым светом (аналогично дальнему свету
        автомобилей). Габаритные огни представляют собой мышей с горящими глазками.</string>



</resources>