<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <ImageView
        android:id="@+id/listImage1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/totoro"
        android:scaleType="centerCrop"
        android:src="@drawable/totoro1"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/listText1"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginStart="16sp"
        android:gravity="center_vertical"
        android:text="@string/totoro"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/guideline7" />

    <ImageView
        android:id="@+id/listImage2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/catbus"
        android:scaleType="centerCrop"
        android:src="@drawable/catbus1"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/listImage1" />

    <Button
        android:id="@+id/listText2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/catbus"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/listText1" />

    <ImageView
        android:id="@+id/listImage3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/satsuki"
        android:scaleType="centerCrop"
        android:src="@drawable/satsuki1"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/listImage2"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/listText3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/satsuki"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/listText2" />

    <ImageView
        android:id="@+id/listImage4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/mei"
        android:scaleType="centerCrop"
        android:src="@drawable/mei1"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/listImage3"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/listText4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/mei"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/listText3" />

    <ImageView
        android:id="@+id/listImage5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tatsuo"
        android:scaleType="centerCrop"
        android:src="@drawable/tatsuo1"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/listImage4"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/listText5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/tatsuo"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/listText4" />

    <ImageView
        android:id="@+id/listImage6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/yasuko"
        android:scaleType="centerCrop"
        android:src="@drawable/yasuko1"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/listImage5"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/listText6"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/yasuko"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/listText5" />

    <ImageView
        android:id="@+id/listImage7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/susuwatari"
        android:scaleType="centerCrop"
        android:src="@drawable/susuwatari1"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/listImage6"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/listText7"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/susuwatari"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/listText6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="16dp"
        app:layout_constraintHorizontal_bias="0.5"
         />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/listText1"
        app:layout_constraintGuide_begin="82dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>